Changes in @NEW@:
    * When using the tagScript argument with the client's applyUpdateJob
      call, the paths to group scripts to be executed are stored relative
      to the root of the installation, instead of absolute. The tag
      script is always supposed to be executed under chroot. (CNY-2523)
    * When resuming the update after the execution of a critical update,
      Conary will now use the original file replacement flags. This
      corrects file conflict errors in a migrate when a critical update
      was present. (CNY-2513)
    * The lazy file cache was using /proc/self/fd as a method of
      determining the number of open file descriptors for the current
      process. However, under certain circumstances the directory is not
      readable. The lazy file cache now uses a poll(2)-based technique.
      (CNY-2536)

Changes in 1.2.17:
  o Build Changes:
    * Java dependencies for classes that are not dependency-complete
      are now automatically disabled. To re-enable them, the missing
      dependencies should be added as buildRequires. (CNY-2175)

  o Bug Fixes:
    * A minor bug in the display of the password prompt has been fixed.
      (CNY-2497)
    * Slow SQL queries used to remove unused entries from the
      TroveFiles table and TroveTroves table have been rewritten to
      make some queries faster with repositories implemented with a
      sqlite database. (CNY-2515)
    * When using the tagScript argument with the client's applyUpdateJob
      call, the paths to group scripts to be executed are stored relative
      to the root of the installation, instead of absolute. The tag
      script is always supposed to be executed under chroot. (CNY-2523)
    * When using the tagScript argument with the client's applyUpdateJob
      call, the paths to group scripts to be executed are stored relative
      to the root of the installation, instead of absolute. The tag
      script is always supposed to be executed under chroot. (CNY-2523)
